--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,10 +20,12 @@ requirements:
   host:
     - pip
     - poetry-core
-    - python >=3.8,<4.0
+    - python >=3.9,<4.0
   run:
-    - wcwidth >=0.2.5,<0.3.0
-    - python >=3.8,<4.0
+    - wcwidth >=0.2.5,<=0.2.8
+    - python >=3.9,<4.0
+    - setuptools >=69.0.3
+    - importlib-resources >=6.1
 
 test:
   imports:
